[project]
name = "mountain-sunset"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Samurai-Human-Go_Jetson", email = "gotechsamurai@samurai-human-go.com" }
]
dependencies = [
    "ephem>=4.2",
    "requests>=2.32.5",
    "pyyaml>=6.0.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mountain_sunset"]
